@@ -35,6 +35,7 @@ Changes
 11/02/11 r416 Updated Windows installer
 
 Fixes
+12/07/15 Fixed some memleaks in lastspoke.c and converted it to unix format
 12/07/09 More warning fixes
 12/07/08 Lots of changes in users.c/channels.c/ctcp.c
 12/07/08 Fixed p10_gline to support 2.10.12's 6 arg gline format
